[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Breakfast Noodles DEMO.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Minako-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/end-screen.png" type="Texture" id=3]
[ext_resource path="res://assets/Button.png" type="Texture" id=4]
[ext_resource path="res://scenes/End-Screen.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/button_1.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.552941 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )
modulate_color = Color( 0.65098, 0.282353, 0.0313726, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 2 )

[node name="End-Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="CurrentRun" type="Label" parent="."]
margin_left = 36.0
margin_top = 32.0
margin_right = 250.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Share your stats :D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CurrentRun"]
anchor_left = 0.0280374
anchor_top = -0.147541
anchor_right = 0.0280374
anchor_bottom = -0.147541
margin_left = -10.0
margin_top = 73.0
margin_right = 486.0
margin_bottom = 969.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="RichTextLabel" parent="CurrentRun/Panel"]
margin_left = 24.0
margin_top = 24.0
margin_right = 472.0
margin_bottom = 888.0
custom_fonts/normal_font = SubResource( 3 )
text = "Levels:
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4
00:00:00:00 - 0/4

Total Time:
00:00:00:00

Deaths:
0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="Button" parent="."]
margin_left = 1624.0
margin_top = 912.0
margin_right = 1850.0
margin_bottom = 1018.0
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[connection signal="mouse_entered" from="GoBackButton" to="." method="_on_GoBackButton_mouse_entered"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
